--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -8,59 +8,116 @@
     <%= f.label :isbn %> <%= modal_to "¿Qué es ISBN?", static_path('que-es-isbn'), :id => "div-id" %><br />
     <%= f.text_field :isbn %>
   </p>
-  
-  <!-- <p>
-    <%= f.label :available %><br />
-    <%= f.check_box :available %>
-  </p> -->
-  <!-- Autor(es) -->
-  
-  <p>
-    <%= f.label :author %><br />
-    <%= f.text_field :author_names %>
-  </p>
-  
-  <p>
-    <%= f.label :published_date %><br />
-    <%= f.text_field :published_date %>
-  </p>
-  
-  <p>
-    <%= f.label :editorial %><br />
-    <%= f.text_field :editorial %>
-  </p>
-  
-  <!-- Género -->
-  
-  <p>
-    <%= f.label :tag_list %><br />
-    <%= f.text_field :tag_list %>
-  </p>
-  
-  <p>
-    <%= f.label :synopsis %><br />
-    <%= f.text_area :synopsis %>
-  </p>
-  
-  <p>
-    <%= f.label :health_status %><br />
-    <%= f.text_field :health_status %>
-  </p>
-  
-  <p>
-    <%= f.label :health_description %><br />
-    <%= f.text_area :health_description %>
-  </p>
-  
-  <p><%= f.submit %></p>
+
+<!-- <p>
+<%= f.label :available %><br />
+<%= f.check_box :available %>
+</p> -->
+<!-- Autor(es) -->
+
+<p>
+  <%= f.label :author %><br />
+  <%= f.text_field :author_names %>
+</p>
+
+<p>
+  <%= f.label :published_date %><br />
+  <%= f.text_field :published_date %>
+</p>
+
+<p>
+  <%= f.label :editorial %><br />
+  <%= f.text_field :editorial %>
+</p>
+
+<!-- Género -->
+
+<p>
+  <%= f.label :tag_list %><br />
+  <%= f.text_field :tag_list %>
+</p>
+
+<p>
+  <%= f.label :synopsis %><br />
+  <%= f.text_area :synopsis %>
+</p>
+
+<p>
+  <%= f.label :health_status %><br />
+  <%= f.text_field :health_status %>
+</p>
+
+<p>
+  <%= f.label :health_description %><br />
+  <%= f.text_area :health_description %>
+</p>
+
+<p><%= f.submit %></p>
 <% end %>
 
 <% content_for :head do %>
-  <script type="text/javascript">
-    jQuery(function($){
-      $("#book_author_names").autocomplete({
-        source: '<%= search_author_path %>'
-      });
-    })
-  </script>
+<script type="text/javascript">
+  jQuery(function($){
+    
+    function split( val ) {
+    	return val.split( /,\s*/ );
+    }
+
+    function extractLast( term ) {
+    	return split( term ).pop();
+    }
+    
+    $.ajax({
+      url: "<%= tags_list_url(:format => :xml) %>",
+      dataType: "xml",
+      success: function(xmlResponse){
+        var data = $("acts-as-taggable-on-tag", xmlResponse).map(function(){
+          return {value: $( "name", this ).text(), id: $( "id", this ).text()};
+        }).get();
+        
+        $("#book_tag_list").autocomplete({
+          minLength: 0,
+          source: function (request, response){
+            response($.ui.autocomplete.filter(data, extractLast(request.term)));
+          },
+          focus: function() {return false;},
+          select: function(event, ui){
+            var terms = split( this.value );
+            terms.pop();
+            terms.push( ui.item.value );
+            terms.push( "" );
+            this.value = terms.join( ", " );
+            return false;
+          }
+        });
+      }
+    });
+    
+    $.ajax({
+      url: "<%= authors_list_url(:format => :xml) %>",
+      dataType: "xml",
+      success: function(xmlResponse){
+        var author_data = $("author", xmlResponse).map(function(){
+          return {value: $( "name", this ).text()};
+        }).get();
+        
+        $("#book_author_names").autocomplete({
+          minLength: 0,
+          source: function (request, response){
+            response($.ui.autocomplete.filter(author_data, extractLast(request.term)));
+          },
+          focus: function() {return false;},
+          select: function(event, ui){
+            var terms = split( this.value );
+            terms.pop();
+            terms.push( ui.item.value );
+            terms.push( "" );
+            this.value = terms.join( ", " );
+            return false;
+          }
+        });
+      }
+    });
+  });
+</script>
 <% end %>
