Finished user sessions, fixed authlogic rails3 shit

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,9 +1,14 @@
-<% title "User" %>
+<% title @user.name %>
 
 <p>
   <strong>Name:</strong>
   <%= @user.name %>
 </p>
+
+<p>
+  <%= image_tag @user.avatar.url(:small) %>
+</p>
+
 <p>
   <strong>Age:</strong>
   <%= @user.age %>
