--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,16 @@
   </head>
   <body>
     <div id="container">
+      <div id="user_nav">
+        <% if current_user %>
+          Hola! <%= current_user.name %>
+          <%= link_to "Editar perfíl", edit_user_path(current_user) %> |
+          <%= link_to "Cerrar sesión", logout_path %>
+        <% else %>
+          <%= link_to "Register", new_user_path %> |
+          <%= link_to "Login", login_path %>
+        <% end %>
+      </div>
       <% flash.each do |name, msg| %>
         <%= content_tag :div, msg, :id => "flash_#{name}", :class => "alert" %>
       <% end %>
