--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,17 +9,34 @@
   </head>
   <body>
     <div id="container">
-      <% flash.each do |name, msg| %>
-        <%= content_tag :div, msg, :id => "flash_#{name}", :class => "alert" %>
-      <% end %>
-      
-      <%= content_tag :h1, yield(:title) if show_title? %>
-      
-      <%= clear %>
-      
-      <div id="navigation">
-        <%= render_navigation %>
-      </div>
+	
+		<% flash.each do |name, msg| %>
+	        <%= content_tag :div, msg, :id => "flash_#{name}", :class => "alert" %>
+	      <% end %>
+
+	      <%= content_tag :h1, yield(:title) if show_title? %>
+	
+     	  <%= clear %>
+	
+	<div id= "header">
+		<div id="logo">
+			<%= image_tag ("/images/layout/logo.png") %>
+		</div>
+		<div id= "search">
+			
+		</div>
+	</div>
+	<div id= "nav-menu">
+		<ul>
+			<li><%= link_to "Inicio", root_path %></li>
+			<li><%= link_to "El Trueque", "#" %></li>
+			<li><%= link_to "Vitamina L", "#" %></li>
+			<li><%= link_to "Club de Lectores", "#" %></li>
+			<li><%= link_to "Quienes Somos","#" %></li>
+			<li><%= link_to "Contacto", "#" %></li>
+		</ul>
+		<%= clear %>
+	</div>
       
       <%= clear %>
       <%= yield %>
