--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #4B7399;
+  background-color: #FFF;
   font-family: Verdana, Helvetica, Arial;
   font-size: 14px;
 }
@@ -19,13 +19,49 @@ a {
 }
 
 #container {
-  width: 75%;
+  width: 960px;
   margin: 0 auto;
   background-color: #FFF;
-  padding: 20px 40px;
   border: solid 1px black;
-  margin-top: 20px;
 }
+#header{
+  width: 960px;
+  height: 104px;
+  background-image:url('/images/layout/bg_header.jpg');
+}
+#logo{
+  padding: 7px 10px;
+}
+#nav-menu {
+  width: 100%;
+  display: block; 
+  height:36px;
+  background: transparent url('/images/layout/bg_menu.jpg') bottom left repeat-x;
+}
+
+#nav-menu ul {
+  list-style: none;
+  margin: 0 auto;
+}
+
+#nav-menu li {
+  float: left;
+  margin: 0 0.15em;
+  padding: 0px 40px;
+}
+
+#nav-menu li a
+{
+  font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
+  font-size:12px;
+  color:#FFF;
+  display: block;
+  border-width: 0px;
+  border-style: none;
+  text-decoration: none;
+  padding-top:5px;
+}
+
 
 #flash_notice, #flash_error, #flash_alert {
   padding: 5px 8px;
@@ -77,22 +113,22 @@ a {
 
 /* OVERLAY DIVS */
 #overlay {
-	height:450px;
-	width: 600px;
-	position: relative;
-	display: none;
-	border-radius: 5px;
-	-moz-border-radius: 5px;
+  height:450px;
+  width: 600px;
+  position: relative;
+  display: none;
+  border-radius: 5px;
+  -moz-border-radius: 5px;
 }
 
 /* container for external content. uses vertical scrollbar, if needed */
 div.contentWrap {
-	height:400px;
-	width: 100%;
-	padding: 0px 20px 0px;
-	overflow-y:auto;
-	overflow-x:hidden;
-	background: #FFF;
+  height:400px;
+  width: 100%;
+  padding: 0px 20px 0px;
+  overflow-y:auto;
+  overflow-x:hidden;
+  background: #FFF;
 }
 
 /* ######################################## OVERLAY STYLES */
