Making logo SEO

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
 	
 	<div id= "header">
 		<div id="logo">
-			<%= image_tag ("/images/layout/logo.png") %>
+		  <%= link_to "E Truque - Universidad EAFIT", root_url %>
 		</div>
 		<div id= "search">
 			
