--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,6 +37,14 @@
 		</ul>
 		<%= clear %>
 	</div>
+	
+	<div id="slider">
+	 <%= image_tag ("/images/layout/banner1.jpg") %>
+	</div>
+	
+	<div id="login">
+		
+	</div>
       
       <%= clear %>
       <%= yield %>
