--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -4,6 +4,12 @@
     <%= f.label :title %><br />
     <%= f.text_field :title %>
   </p>
+  
+  <p>
+    <%= f.label :photo %>
+    <%= f.file_field :photo %>
+  </p>
+  
   <p>
     <%= f.label :isbn %> <%= modal_to "¿Qué es ISBN?", static_path('que-es-isbn'), :id => "div-id" %><br />
     <%= f.text_field :isbn %>
