--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -2,6 +2,8 @@ body {
   background-color: #FFF;
   font-family: Verdana, Helvetica, Arial;
   font-size: 14px;
+  margin:0;
+  background-image:url('/images/layout/pattern.gif');
 }
 
 a img {
@@ -18,10 +20,17 @@ a {
   overflow: hidden;
 }
 
+.line-separator{
+  color: #FFFFFF;
+  font-family: Arial;
+  font-size: 10px;
+}
+
 #container {
   width: 960px;
   margin: 0 auto;
   background-color: #FFF;
+  -moz-box-shadow: 0 0 20px 2px gray;
 }
 #header{
   width: 960px;
