--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,7 +40,7 @@
 	
 	<div id="slider">
 	  <% for banner in @banners %>
-	    <%= link_to image_tag(banner.photo.url), "#" %>
+	    <%= link_to_or_default image_tag(banner.photo.url), banner %>
 	  <% end %>
   </div>
 		
