--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -33,6 +33,8 @@ a {
   margin: 0 auto;
   background-color: #FFF;
   -moz-box-shadow: 0 0 20px 2px gray;
+  -webkit-box-shadow: 0 0 20px 2px gray;
+  box-shadow: 0 0 20px 2px gray;
 }
 #header{
   width: 960px;
