--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -146,6 +146,8 @@ a {
 
 #login #login-dashboard{padding: 0px 10px; margin-top: -10px;}
 
+#sub-header {margin-bottom: 50px;}
+
 /* ######################################## OVERLAY STYLES */
 #overlay {
   height:450px;
