Added navigation controller and removed app#root from template

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -130,6 +130,12 @@ a {
   margin: 0;
 }
 
+.left{float: left;}
+
+/* ######################################## LAYOUT STYLES */
+#footer {height: 150px; background: #F2F2F2; width: 100%; border: 1px solid #CCC; border-left: 0px; border-right: 0px; margin-bottom: 30px;}
+#footer .section {width: 320px; }
+#footer .section h3 {color: #1F4A57; font-family: Georgia; font-weight: normal; font-size: 18px;}
 
 /* ######################################## INDEX STYLES */
 #login{width: 280px; float: right; background: #C7B472 url(/images/layout/backlogin.jpg) bottom left no-repeat; height: 270px;}
