--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,41 +36,29 @@
       </ul>
       <%= clear %>
     </div> <!-- End of nav-menu div -->
-
-    <div id="sub-header">
-      <div id="slider">
-        <% for banner in @banners %>
-        <%= link_to_or_default image_tag(banner.photo.url), banner %>
-        <% end %>
-      </div>
-
-      <div id="login" class="right">
-        <div class = "quoted-title" id="login-title">
-          <% if current_user %>
-          HOLA USUARIO
-          <% else %>
-          Acceso usuarios
-          <% end %>
-        </div>
-
-        <div id    = "login-dashboard">
-          <% if current_user %>
-          HOLA USUARIO
-          <% else %>
-          <%= render :partial => "user_sessions/small" %>
-          <% end %>
-        </div>
-
-
-      </div> <!-- End of login div -->
-      <%= clear %>
-    </div> <!-- End of sub-header div -->
-    <%= content_tag :h1, yield(:title) if show_title? %>
     <%= yield %>
     <%= clear %>
+    
+    <div id="footer">
+      <div class="left section" id="interesting-links">
+        <h3>Enlaces de interés</h3>
+      </div>
+      
+      <div class="left section" id="footer-logos">
+        <h3>Con el apoyo de</h3>
+      </div>
+      
+      <div class="left section" id="get-social">
+        <h3>Encuéntranos en</h3>
+      </div>
+    </div>
+    <%= clear %>
   </div>
-
-
+  <%= clear %>
+  
+  
+  
+  
   <div class="overlay" id="overlay">
     <div class="contentWrap"></div>
   </div>
