--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -46,10 +46,23 @@
       
       <div class="left section" id="footer-logos">
         <h3>Con el apoyo de</h3>
+		<div class="eafit_icons">
+			<%= link_to image_tag("layout/eafit.png"), "http://www.facebook.com", :target => "_blank" %>
+			<%= link_to image_tag("layout/biblio1.png"), "http://www.twitter.com", :target => "_blank"%>
+		
+		</div>
       </div>
       
       <div class="left section" id="get-social">
         <h3>Encuéntranos en</h3>
+		<div class="footer_icons">
+			<%= link_to image_tag("layout/facebook.png"), "http://www.facebook.com", :target => "_blank" %>
+			<%= link_to image_tag("layout/twitter.png"), "http://www.twitter.com", :target => "_blank"%>
+			<%= link_to image_tag("layout/wordpress.png"), "http://www.wordpress.com", :target => "_blank"%>
+			<%= link_to image_tag("layout/youtube.png"), "http://www.youtube.com", :target => "_blank"%>
+			<%= link_to image_tag("layout/rss.png"), "#" %>
+		
+		</div>
       </div>
     </div>
     <%= clear %>
