--- a/app/views/navigation/index.html.erb
+++ b/app/views/navigation/index.html.erb
@@ -15,15 +15,59 @@
       <% end %>
     </div>
 
-    <div id    = "login-dashboard">
+    <div id = "login-dashboard">
       <% if current_user %>
-      HOLA USUARIO
+        HOLA USUARIO
       <% else %>
-      <%= render :partial => "user_sessions/small" %>
+        <%= render :partial => "user_sessions/small" %>
       <% end %>
     </div>
-
-
   </div> <!-- End of login div -->
   <%= clear %>
 </div> <!-- End of sub-header div -->
+
+<% content_for :sidebar do %>
+<div id="sidebar">
+  <div id="current-poll">
+    <div class = "quoted-title" id="login-title">
+      Encuesta
+    </div>
+    <div id="question">
+      ¿Cuál es su género preferido?
+    </div>
+    <div id="results">
+      <ul class="options" style="list-style: none; padding: 0; margin: 5px 0 5px;">
+        <li><%= radio_button_tag :drama, "Drama" %> Drama</li>
+        <li><%= radio_button_tag :drama, "Drama" %> Comedia</li>
+        <li><%= radio_button_tag :drama, "Drama" %> Crímen</li>
+        <li><%= radio_button_tag :drama, "Drama" %> Acción</li>
+      </ul>
+      <%= submit_tag "Votar", :class => "btn" %>
+    </div>
+  </div>
+</div> <!-- End of sidebar div -->
+<% end %>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
