more footer styles dude

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,12 +42,15 @@
     <div id="footer">
       <div class="left section" id="interesting-links">
         <h3>Enlaces de interés</h3>
+		<p><%= link_to "Universidad EAFIT", "http://www.eafit.edu.co", :target => "_blank"%></p>
+		<p><%= link_to "Biblioteca EAFIT", "http://www.eafit.edu.co", :target => "_blank"%></p>
+		<p><%= link_to "Red de Bibliotecas", "http://www.eafit.edu.co", :target => "_blank"%></p>
       </div>
       
       <div class="left section" id="footer-logos">
         <h3>Con el apoyo de</h3>
 		<div class="eafit_icons">
-			<%= link_to image_tag("layout/eafit.png"), "http://www.facebook.com", :target => "_blank" %>
+			<%= link_to image_tag("layout/eafit.png"), "http://www.eafit.edu.co", :target => "_blank" %>
 			<%= link_to image_tag("layout/biblio1.png"), "http://www.twitter.com", :target => "_blank"%>
 		
 		</div>
