--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -134,7 +134,7 @@ a {
 
 /* ######################################## LAYOUT STYLES */
 #footer {height: 150px; background: #F2F2F2; width: 100%; border: 1px solid #CCC; border-left: 0px; border-right: 0px; margin-bottom: 30px;}
-#footer .section {width: 320px; }
+#footer .section {width: 310px; }
 #footer .section h3 {color: #1F4A57; font-family: Georgia; font-weight: normal; font-size: 18px;}
 
 .footer_icons a{
@@ -143,6 +143,16 @@ a {
 .eafit_icons a{
 }
 
+#interesting-links{
+width:300px;
+margin-left:5px;
+}
+#interesting-links a{
+  color: #1F4A57; 
+  font-family: "Lucida Sans Unicode","Lucida Grande",sans-serif; 
+  font-weight: normal; 
+  font-size: 13px;
+}
 /* ######################################## INDEX STYLES */
 #login{width: 280px; float: right; background: #C7B472 url(/images/layout/backlogin.jpg) bottom left no-repeat; height: 270px;}
 
