--- a/app/views/navigation/index.html.erb
+++ b/app/views/navigation/index.html.erb
@@ -48,7 +48,13 @@
       </ul>
       <%= submit_tag "Votar", :class => "btn" %>
     </div>
+  </div> <!-- End of current-poll div -->
+  
+  
+  <div id="vertical-banner">
+    <%= image_tag "layout/sidebarbanner.jpg" %>
   </div>
+  
 </div> <!-- End of sidebar div -->
 <% end %>  <!-- END OF SIDEBAR -->
 
