Renaming site index file

--- a/app/views/navigation/site_index.html.erb
+++ b/app/views/navigation/site_index.html.erb
@@ -61,7 +61,12 @@
 
 
 <div class="left">
-  <h1>Últimos libros</h1>
+  <div id="latest-books">
+    <h1>Últimos libros</h1>
+  </div>
+  <div id="best-books">
+    <h1>Libros destacados</h1>
+  </div>
 </div>
 
 
