Listing books on index

--- a/app/views/navigation/site_index.html.erb
+++ b/app/views/navigation/site_index.html.erb
@@ -50,7 +50,6 @@
     </div>
   </div> <!-- End of current-poll div -->
   
-  
   <div id="vertical-banner">
     <%= image_tag "layout/sidebarbanner.jpg" %>
   </div>
@@ -63,9 +62,22 @@
 <div class="left">
   <div id="latest-books">
     <h1>Últimos libros</h1>
+    <div class="books">
+    <% for book in @latest_books %>
+      <%= render :partial => "books/book_small", :locals => {:book_small => book} %>
+    <% end %>
+    </div>
   </div>
+  
+  <%= clear %>
+  
   <div id="best-books">
     <h1>Libros destacados</h1>
+    <div class="books">
+    <% for book in @best_books %>
+      <%= render :partial => "books/book_small", :locals => {:book_small => book} %>
+    <% end %>
+    </div>
   </div>
 </div>
 
