--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,11 +26,16 @@
     <div id= "nav-menu">
       <ul>
         <li><%= link_to "Inicio", root_path %></li>
+		<li class ="separator">|</li>
         <li><%= link_to "El Trueque", "#" %></li>
+		<li class ="separator">|</li>
         <li><%= link_to "Vitamina L", "#" %></li>
-        <li><%= link_to "Club de Lectores", "#" %></li>
-        <li><%= link_to "Quienes Somos","#" %></li>
-        <li><%= link_to "Contacto", "#" %></li>
+        <li class ="separator">|</li>
+		<li><%= link_to "Club de Lectores", "#" %></li>
+        <li class ="separator">|</li>
+		<li><%= link_to "Quienes Somos","#" %></li>
+        <li class ="separator">|</li>
+		<li><%= link_to "Contacto", "#" %></li>
       </ul>
       <%= clear %>
     </div> <!-- End of nav-menu div -->
