--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -68,7 +68,7 @@ a {
 #nav-menu li {
   float: left;
   margin: 0 0.15em;
-  padding: 0px 40px;
+  padding: 0px 19px;
 }
 
 #nav-menu li a
@@ -85,6 +85,12 @@ a {
 #nav-menu li a:hover
 {
   color:#999999;
+}
+.separator{
+  margin-top:4px;
+  color: #337A8F;
+  font-family: "Trebuchet MS";
+  font-size: 13px;
 }
 
 #current-poll{
