--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -1,7 +1,20 @@
 <div id="sidebar">
-  <div class = "quoted-title" id="login-title">
-    OTRA COSA QUE NO ES ENCUESTA
-  </div>
+  <div class = "quoted-title" id="login-title">Perfil</div>
+	<div id="perfil">
+		<p>Hola Usuario</p>
+		<div id="foto-perfil"></div>
+	</div>
+  
+  <div class = "quoted-title" id="login-title">Libros que...</div>
+	<div id ="libros-que">
+		<ul>
+			<li>Espero</li>
+			<li>Deseo</li>
+			<li>Tengo</li>
+			<li>Truequeados</li>
+		</ul>
+  	</div>
+  <div class = "quoted-title" id="login-title">Mis lectores</div>
   <%= clear %>
 </div>
 <%= clear %>
