--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -154,7 +154,10 @@ h1,h2,h3,h4,h5,h6 {font-family: Georgia, Verdana, Helvetica; font-weight: normal
 h1{color: #1F4A57;}
 
 /* ######################################## INDEX STYLES */
-#login{width: 280px; float: right; background: #C7B472 url(/images/layout/backlogin.jpg) bottom left no-repeat; height: 270px;}
+#login{
+  width: 280px; float: right; height: 270px;
+  background: #C7B472 url(/images/layout/backlogin.jpg) bottom left no-repeat;
+}
 
 .btn{
   background: none repeat scroll 0 0 #DDDDDD;
@@ -181,14 +184,12 @@ label{
 }
 
 .quoted-title{
-  height: 59px;
+  height: 59px; color: #FFF; font-family: Georgia; font-size: 20px;
   background: transparent url(/images/layout/imgtitle.png) top right repeat-x;
-  color: #FFF;
-  font-family: Georgia;
-  font-size: 20px;
-  text-decoration: none;
-  padding: 10px 10px 0px;
+  text-decoration: none; padding: 10px 10px 0px;
 }
+
+.small {font-size: 10px;}
 
 /* ######################################## LAYOUT STYLES */
 
@@ -225,6 +226,7 @@ label{
 #login #login-dashboard{padding: 0px 10px; margin-top: -10px;}
 
 
+
 /* ######################################## OVERLAY STYLES */
 #overlay {
   height:450px;
@@ -248,6 +250,7 @@ div.contentWrap {
 div#overlay .close {background-image:url("/images/close.png"); cursor:pointer; height:35px; position:absolute; right:-15px; top:15px; width:35px;}
 div#navigation ul {padding: 0; margin: 0; list-style: none;}
 div#navigation ul li {float: left; padding: 0 10px; margin: 0;}
+
 
 
 /* ######################################## YOUTUBE PLAYER STYLES */
