--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -37,6 +37,19 @@
   <%= @book.health_description %>
 </p>
 
+<%= clear %>
+
+<h2>Comentarios</h2>
+<% if @book.comments.any? %>
+  <%= render @book.comments %>
+<% else %>
+  <%= raw("<p>Podrías ser el primero en comentar!</p>") if current_user %>
+<% end %>
+
+<%= clear %>
+
+<%= render :partial => "comments/small_create", :locals => {:commentable => @book} %>
+
 <p>
   <%= link_to "Edit", edit_book_path(@book) %> |
   <%= link_to "Destroy", @book, :confirm => 'Are you sure?', :method => :delete %> |
