Added comments to users

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,4 +1,9 @@
-<h1>Todos los libros</h1>
+<% if @user %>
+  <h1>Todos los libros de <%= @user.name %></h1>
+<% else %>
+  <h1>Todos los libros</h1>
+<% end %>
+
 
 <table>
   <tr>
