--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -147,6 +147,7 @@ a {
 }
 
 .left{float: left;}
+.leftr {float: left; padding-left: 20px;}
 .right{float: right;}
 
 h1,h2,h3,h4,h5,h6 {font-family: Georgia, Verdana, Helvetica; font-weight: normal;}
