--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -30,6 +30,21 @@
   <%= @user.actual_book %>
 </p>
 
+
+<%= clear %>
+
+<h2>Comentarios</h2>
+<% if @book.comments.any? %>
+  <%= render @book.comments %>
+<% else %>
+  <%= raw("<p>Podrías ser el primero en comentar!</p>") if current_user %>
+<% end %>
+
+<%= clear %>
+
+<%= render :partial => "comments/small_create", :locals => {:commentable => @book} %>
+
+
 <p>
   <%= link_to "Edit", edit_user_path(@user) %> |
   <%= link_to "Destroy", @user, :confirm => 'Are you sure?', :method => :delete %> |
