Fixed comments bug

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -103,7 +103,7 @@
           <%= link_to image_tag("layout/facebook.png"), "http://www.facebook.com", :target => "_blank" %>
           <%= link_to image_tag("layout/twitter.png"), "http://www.twitter.com", :target => "_blank"%>
           <%= link_to image_tag("layout/wordpress.png"), "http://www.wordpress.com", :target => "_blank"%>
-          <%= link_to image_tag("layout/youtube.png"), "http://www.youtube.com", :target => "_blank"%>
+          <%= link_to image_tag("layout/youtube.png"), "http://www.youtube.com/user/medialabeafit?feature=mhum", :target => "_blank"%>
           <%= link_to image_tag("layout/rss.png"), "#" %>
 
         </div>
