--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -28,6 +28,9 @@ a {
   font-size: 10px;
 }
 
+.notifications{color: #FFF; text-align: center; position: fixed; background: rgba(49,117,138,0.8); width: 100%; height: 25px; padding-top: 10px;}
+.notifications a {color: #CCC; text-decoration: none; text-shadow: 1px 1px 1px rgba(0,0,0,0.5);}
+.notifications a.hide-not{padding-left: 30px; }
 #container {
   width: 960px;
   margin: 0 auto;
