--- a/app/views/books/_book_small_trade.html.erb
+++ b/app/views/books/_book_small_trade.html.erb
@@ -2,6 +2,7 @@
   <div class="cover"><%= link_to image_tag(book.photo.url), book %></div>
   <div class="info">
     <p><%= book.title %></p>
-    <p><%= link_to "Ver Libro", book %>  |  <%= link_to "Aceptar trueque", accept_trade_path(@trade, :book_id => book.id), :method => :post %></p>
+    
+    <p><%= modal_to "Ver libro", book, :id => "div-id" %> |  <%= link_to "Aceptar trueque", accept_trade_path(@trade, :book_id => book.id), :method => :post %></p>
   </div>
 </div>
