--- a/app/views/books/_book_small_trade.html.erb
+++ b/app/views/books/_book_small_trade.html.erb
@@ -3,6 +3,6 @@
   <div class="info">
     <p><%= book.title %></p>
     
-    <p><%= modal_to "Ver libro", book, :id => "div-id" %> |  <%= link_to "Aceptar trueque", accept_trade_path(@trade, :book_id => book.id), :method => :post %></p>
+    <p><%= modal_to "Ver libro", book_path(book, :format => "modal"), :id => "div-id" %> |  <%= link_to "Aceptar trueque", accept_trade_path(@trade, :book_id => book.id), :method => :post %></p>
   </div>
 </div>
