--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
 <head>
   <title><%= content_for?(:title) ? yield(:title) : "Trueque" %></title>
   <%= stylesheet_link_tag "jquery.ui", "nivo.slider", "application" %>
-  <%= javascript_include_tag 'jquery.min','jquery.ui.min', 'autocomplete-rails','jquery.tools.min','jquery.nivo.slider', 'rails', 'application' %>
+  <%= javascript_include_tag :defaults %>
   <%= csrf_meta_tag %>
   <%= yield(:head) %>
   
