--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -56,7 +56,7 @@
       <ul>
         <li><%= link_to "Inicio", root_path %></li>
 		<li class ="separator">|</li>
-        <li><%= link_to "El Trueque", "#" %></li>
+        <li><%= link_to "El Trueque", books_path %></li>
 		<li class ="separator">|</li>
         <li><%= link_to "Vitamina L", static_path("vitamina-l") %></li>
         <li class ="separator">|</li>
