--- a/app/views/navigation/site_index.html.erb
+++ b/app/views/navigation/site_index.html.erb
@@ -63,7 +63,7 @@
   </div> <!-- End of current-poll div -->
   
   <div id="vertical-banner">
-    <%= image_tag "layout/sidebarbanner.jpg" %>
+    <%= image_tag "layout/sidebarbanner2.jpg" %>
   </div>
   
 </div> <!-- End of sidebar div -->
