--- a/app/views/vitamins/show.html.erb
+++ b/app/views/vitamins/show.html.erb
@@ -6,7 +6,7 @@
 </p>
 <p>
   <strong>Video Url:</strong>
-  <%= @vitamin.video_url %>
+  <%= @vitamin.video_code %>
 </p>
 <p>
   <strong>Description:</strong>
