--- a/app/views/vitamins/_form.html.erb
+++ b/app/views/vitamins/_form.html.erb
@@ -5,8 +5,8 @@
     <%= f.text_field :name %>
   </p>
   <p>
-    <%= f.label :video_url %><br />
-    <%= f.text_field :video_url %>
+    <%= f.label :video_code %><br />
+    <%= f.text_field :video_code %>
   </p>
   <p>
     <%= f.label :description %><br />
